--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_script:
   # install Saxon
   - mkdir -p /tmp/saxon
   - export SAXON_CP=/tmp/xspec/saxon/saxon9he.jar
-  - wget -O ${SAXON_CP} https://repo1.maven.org/maven2/net/sf/saxon/Saxon-HE/9.7.0-14/Saxon-HE-9.7.0-14.jar
+  - wget -O ${SAXON_CP} https://repo1.maven.org/maven2/net/sf/saxon/Saxon-HE/9.7.0-14/Saxon-HE-9.7.0-14.jar -U "Any User Agent"
 
 script:
   - cd Xspec-Travis/fhir_2_ada/mp/9.0.7/beschikbaarstellen_medicatiegegevens/payload/test
