--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
 script:
   - cd Xspec-Travis/fhir_2_ada/mp/9.0.7/beschikbaarstellen_medicatiegegevens/payload/test
   - echo "execute XSpec unit tests"
-  - ./run-xspec-tests.sh
+  - bash run-xspec-tests.sh
