--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_script:
   # install XSpec
   - git clone -b master https://github.com/xspec/xspec.git /tmp/xspec
   # install Saxon
-  - mkdir -p /tmp/saxon
+  - mkdir -p /tmp/xspec/saxon/
   - export SAXON_CP=/tmp/xspec/saxon/saxon9he.jar
   - wget https://repo1.maven.org/maven2/net/sf/saxon/Saxon-HE/9.7.0-14/Saxon-HE-9.7.0-14.jar -U "Any User Agent" -O ${SAXON_CP} 
 
